--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-tmdb",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cyril-cordier.github.io/React-TMDB-Test-Fleet",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -9,7 +10,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -18,6 +21,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
